[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seo-bhishma"
version = "3.0.0"
description = "A comprehensive SEO toolkit with CLI, MCP server, and AI agent support."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Hitendra Rathore", email = "hitendra1995@mail.com" },
]
keywords = ["SEO", "CLI", "MCP", "AI", "sitemap", "indexing", "backlinks", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # CLI & UI
    "click",
    "rich",
    "art",
    # Data
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "pandas",
    "numpy",
    "pyyaml",
    # HTTP & Web
    "requests",
    "beautifulsoup4",
    "lxml",
    "lxml_html_clean",
    "requests-html",
    "fake-useragent",
    "browserforge",
    "playwright",
    # ML/NLP
    "scikit-learn",
    "spacy",
    "openai",
    # Google APIs
    "google-auth",
    "google-auth-oauthlib",
    "google-api-python-client",
    # Network/Domain
    "dnspython",
    "ipwhois",
    "sublist3r",
    "python-whois",
    "geopy",
    "python-wappalyzer",
]

[project.optional-dependencies]
mcp = [
    "fastmcp>=2.0",
]
agents = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
]
all = [
    "seo-bhishma[mcp,agents]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
]

[project.scripts]
seo-bhishma = "seo_bhishma.cli.app:cli"
seo-bhishma-mcp = "seo_bhishma.mcp.server:main"

[project.urls]
Documentation = "https://github.com/anonymousraft/seo-bhishma-cli#readme"
Source = "https://github.com/anonymousraft/seo-bhishma-cli"
Tracker = "https://github.com/anonymousraft/seo-bhishma-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/seo_bhishma"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
